--- a/public/index.html
+++ b/public/index.html
@@ -660,6 +660,7 @@
               <th class="border border-gray-400 px-3 py-3 text-center">Sasaran Mutu</th>
               <th class="border border-gray-400 px-3 py-3 text-center">Dept</th>
               <th class="border border-gray-400 px-3 py-3 text-center">Periode Evaluasi</th>
+              <th class="border border-gray-400 px-3 py-3 text-center">Nama Produk</th>
               <th class="border border-gray-400 px-3 py-3 text-center">Kategori</th>
               <th class="border border-gray-400 px-3 py-3 text-center">Jan</th>
               <th class="border border-gray-400 px-3 py-3 text-center">Feb</th>
